snsエリア作成

--- a/index.html
+++ b/index.html
@@ -10,6 +10,46 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-
+    <div class="wrapper">
+      <div class="inner">
+        <div class="main_content">
+          <div class="title_text">
+            <h1>アカウント作成</h1>
+          </div>
+          <div class="sns_area">
+            <div class="sns_icon">
+              <div class="button Facebook">
+                <a href="" class="Facebook_link">Facebookでスタート</a>
+              </div>
+              <div class="button Google">
+                <a href="" class="Google_link">Googleでスタート</a>
+              </div>
+            </div>
+            <div class="explanation_text">
+              <p>タイムラインへ投稿を行うことや、アカウント情報を伝えることはありません。</p>
+            </div>
+          </div>
+          <form class="account_form">
+            <div class="explanation_text account_info">
+              <p>アカウント情報</p>
+            </div>
+            <div class="name_area">
+              <p>苗字<input type="text" name="last_name"></p>
+              <p>名前<input type="text" name="first_name"></p>
+            </div>
+            <div class="sex"></div>
+            <div class="birthplace"></div>
+            <div class="email"></div>
+            <div class="phone_number"></div>
+            <div class="password"></div>
+            <div class="course"></div>
+            <div class="note"></div>
+            <div class="create_account"></div>
+          </div>
+        </div>
+        <div class="bottom_content">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
