--- a/index.html
+++ b/index.html
@@ -10,122 +10,120 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    <div class="wrapper">
-      <div class="inner">
-        <div class="main_content">
-          <div class="title_text">
-            <h1>アカウント作成</h1>
-          </div>
-          <div class="form_area sns_area">
-            <div class="sns_icon">
-              <div class="button Facebook">
-                <a href="" class="Facebook_link">Facebookでスタート</a>
-              </div>
-              <div class="button Google">
-                <a href="" class="Google_link">Googleでスタート</a>
-              </div>
+    <div class="inner">
+      <div class="main_content">
+        <div class="title_text">
+          <h1>アカウント作成</h1>
+        </div>
+        <div class="form_area sns_area">
+          <div class="sns_icon">
+            <div class="button Facebook">
+              <a href="" class="Facebook_link">Facebookでスタート</a>
             </div>
-            <div class="explanation_text">
-              <p>タイムラインへ投稿を行うことや、アカウント情報を伝えることはありません。</p>
+            <div class="button Google">
+              <a href="" class="Google_link">Googleでスタート</a>
             </div>
           </div>
-
-          <form class="account_form">
-            <div class="explanation_text account_info">
-              <p>アカウント情報</p>
-            </div>
-            <div class="form_area name_area">
-              <div class="form_size last_name">
-                <p class="required_item">名字</p>
-                <input type="text" name="last_name" class="input_area" required>
-              </div>
-              <div class="form_size first_name">
-                <p class="required_item">名前</p>
-                <input type="text" name="first_name" class="input_area" required>
-              </div>
-            </div>
-
-            <div class="form_area gender_area">
-              <p>性別</p>
-              <div class="radio_area">
-                <input type="radio" id="male" name="gender" value="male" class="radio_button">
-                  <label for="male">男性</label>
-                <input type="radio" id="female" name="gender" value="female" class="radio_button">
-                  <label for="female">女性</label>
-                <input type="radio" id="other" name="gender" value="other" class="radio_button">
-                  <label for="other">その他</label>
-              </div>
-            </div>
-
-            <div class="form_area birthplace">
-              <p>出身</p>
-              <select name="birthplace" id="birthplace" class="input_area select_area">
-                <option value="">東京</option>
-                <option value="">千葉</option>
-                <option value="">埼玉</option>
-                <option value="">神奈川</option>
-              </select>
-            </div>
-
-            <div class="form_area email">
-              <p class="required_item">Eメール</p>
-              <input type="email" id="email" name="email" value="" placeholder="hoge@example.com" class="input_area" required>
-            </div>
-
-            <div class="form_area phone_number">
-              <p>電話番号</p>
-              <input type="text" id="phone_number" name="phone_number" value="" placeholder="09012345678" class="input_area">
-            </div>
-
-            <div class="form_area password">
-              <p class="required_item">パスワード</p>
-              <input type="password" class="input_area" required>
-            </div>
-            <div class="form_area password">
-              <p class="required_item">パスワード確認用</p>
-              <input type="password" class="input_area" required>
-            </div>
-
-            <div class="course">
-              <p>希望コース</p>
-              <label for="front" class="checkbox_area">
-                <input type="checkbox" id="front" value="1" class="checkbox"> フロントエンド
-              </label>
-              <label for="back" class="checkbox_area">
-              <input type="checkbox" id="back" value="2" class="checkbox"> バックエンド
-              </label>
-              <label for="app" class="checkbox_area">
-                <input type="checkbox" id="app" value="3" class="checkbox"> アプリ
-              </label>
-            </div>
-
-            <div class="form_area note">
-              <p>備考</p>
-              <input type="text" id="note" name="note" value="" placeholder="何かあればご記入ください" class="input_area input_area-note">
-            </div>
-
-            <div class="create_account">
-              <input type="submit" value="アカウント作成" class="button-create_account">
-              <div class="agreement">
-                <p>アカウントを作成することにより、
-                  <a href="" class="link_color">利用規約</a>
-                  と
-                  <a href="" class="link_color">プライバシーポリシー</a>
-                  に同意するものとします。
-                </p>
-              </div>
-            </div>
+          <div class="explanation_text">
+            <p>タイムラインへ投稿を行うことや、アカウント情報を伝えることはありません。</p>
           </div>
         </div>
-        <div class="bottom_content">
-          <p>既にアカウントをお持ちですか？
-            <a href="" class="link_color">アカウント</a>
-          </p>
-          <p>認証メールが届きませんか?
-            <a href=""></a>
-          </p>
+
+        <form class="account_form">
+          <div class="explanation_text account_info">
+            <p>アカウント情報</p>
+          </div>
+          <div class="form_area name_area">
+            <div class="form_size last_name">
+              <p class="required_item">名字</p>
+              <input type="text" name="last_name" class="input_area" required>
+            </div>
+            <div class="form_size first_name">
+              <p class="required_item">名前</p>
+              <input type="text" name="first_name" class="input_area" required>
+            </div>
+          </div>
+
+          <div class="form_area gender_area">
+            <p>性別</p>
+            <div class="radio_area">
+              <input type="radio" id="male" name="gender" value="male" class="radio_button">
+                <label for="male">男性</label>
+              <input type="radio" id="female" name="gender" value="female" class="radio_button">
+                <label for="female">女性</label>
+              <input type="radio" id="other" name="gender" value="other" class="radio_button">
+                <label for="other">その他</label>
+            </div>
+          </div>
+
+          <div class="form_area birthplace">
+            <p>出身</p>
+            <select name="birthplace" id="birthplace" class="input_area select_area">
+              <option value="">東京</option>
+              <option value="">千葉</option>
+              <option value="">埼玉</option>
+              <option value="">神奈川</option>
+            </select>
+          </div>
+
+          <div class="form_area email">
+            <p class="required_item">Eメール</p>
+            <input type="email" id="email" name="email" value="" placeholder="hoge@example.com" class="input_area" required>
+          </div>
+
+          <div class="form_area phone_number">
+            <p>電話番号</p>
+            <input type="text" id="phone_number" name="phone_number" value="" placeholder="09012345678" class="input_area">
+          </div>
+
+          <div class="form_area password">
+            <p class="required_item">パスワード</p>
+            <input type="password" class="input_area" required>
+          </div>
+          <div class="form_area password">
+            <p class="required_item">パスワード確認用</p>
+            <input type="password" class="input_area" required>
+          </div>
+
+          <div class="course">
+            <p>希望コース</p>
+            <label for="front" class="checkbox_area">
+              <input type="checkbox" id="front" value="1" class="checkbox"> フロントエンド
+            </label>
+            <label for="back" class="checkbox_area">
+            <input type="checkbox" id="back" value="2" class="checkbox"> バックエンド
+            </label>
+            <label for="app" class="checkbox_area">
+              <input type="checkbox" id="app" value="3" class="checkbox"> アプリ
+            </label>
+          </div>
+
+          <div class="form_area note">
+            <p>備考</p>
+            <input type="text" id="note" name="note" value="" placeholder="何かあればご記入ください" class="input_area input_area-note">
+          </div>
+
+          <div class="create_account">
+            <input type="submit" value="アカウント作成" class="button-create_account">
+            <div class="agreement">
+              <p>アカウントを作成することにより、
+                <a href="" class="link_color">利用規約</a>
+                と
+                <a href="" class="link_color">プライバシーポリシー</a>
+                に同意するものとします。
+              </p>
+            </div>
+          </div>
         </div>
       </div>
+    </div>
+    <div class="bottom_content">
+      <p class="account_question">既にアカウントをお持ちですか？
+        <a href="" class="link_color">ログイン</a>
+      </p>
+      <p class="authentication_question">
+        <a href="" class="link_color">認証メールが届きませんか?</a>
+      </p>
     </div>
   </body>
 </html>
