--- a/index.html
+++ b/index.html
@@ -11,22 +11,20 @@
   </head>
   <body>
     <div class="inner">
-      <div class="main_content">
+      <div class="main">
         <div class="title_text">
           <h1>アカウント作成</h1>
         </div>
-        <div class="form_area sns_area">
-          <div class="sns_icon">
-            <div class="button Facebook">
-              <a href="" class="Facebook_link">Facebookでスタート</a>
-            </div>
-            <div class="button Google">
-              <a href="" class="Google_link">Googleでスタート</a>
-            </div>
+        <div class="icon_area">
+          <div class="Facebook_icon">
+            <a href="" class="button Facebook_link">Facebookでスタート</a>
           </div>
-          <div class="explanation_text">
-            <p>タイムラインへ投稿を行うことや、アカウント情報を伝えることはありません。</p>
+          <div class="Google_icon">
+            <a href="" class="button Google_link">Googleでスタート</a>
           </div>
+        </div>
+        <div class="explanation_text">
+          <p>タイムラインへ投稿を行うことや、アカウント情報を伝えることはありません。</p>
         </div>
 
         <form class="account_form">
@@ -117,7 +115,7 @@
         </div>
       </div>
     </div>
-    <div class="bottom_content">
+    <footer class="footer">
       <p class="account_question">既にアカウントをお持ちですか？
         <a href="" class="link_color">ログイン</a>
       </p>
