--- a/index.html
+++ b/index.html
@@ -45,12 +45,18 @@
           <div class="form_area gender_area">
             <p>性別</p>
             <div class="radio_area">
-              <input type="radio" id="male" name="gender" value="male" class="radio_button">
-                <label for="male">男性</label>
-              <input type="radio" id="female" name="gender" value="female" class="radio_button">
-                <label for="female">女性</label>
-              <input type="radio" id="other" name="gender" value="other" class="radio_button">
-                <label for="other">その他</label>
+              <label for="male" class="radio_label">
+                <input type="radio" id="male" name="gender" value="male" class="radio_button">
+                <span>男性</span>
+              </label>
+              <label for="female" class="radio_label">
+                <input type="radio" id="female" name="gender" value="female" class="radio_button">
+                <span>女性</span>
+              </label>
+              <label for="other" class="radio_label">
+                <input type="radio" id="other" name="gender" value="other" class="radio_button">
+                <span>その他</span>
+              </label>
             </div>
           </div>
 
@@ -66,12 +72,12 @@
 
           <div class="form_area email">
             <p class="required_item">Eメール</p>
-            <input type="email" id="email" name="email" value="" placeholder="hoge@example.com" class="input_area" required>
+            <input type="email" id="email" name="email" value="" placeholder="ex) hoge@example.com" class="input_area" required>
           </div>
 
           <div class="form_area phone_number">
             <p>電話番号</p>
-            <input type="text" id="phone_number" name="phone_number" value="" placeholder="09012345678" class="input_area">
+            <input type="text" id="phone_number" name="phone_number" value="" placeholder="ex) 09012345678" class="input_area">
           </div>
 
           <div class="form_area password">
@@ -79,7 +85,7 @@
             <input type="password" class="input_area" required>
           </div>
           <div class="form_area password">
-            <p class="required_item">パスワード確認用</p>
+            <p class="required_item">パスワード(確認用)</p>
             <input type="password" class="input_area" required>
           </div>
 
@@ -116,7 +122,7 @@
       </div>
     </div>
     <footer class="footer">
-      <p class="account_question">既にアカウントをお持ちですか？
+      <p class="account_question">すでにアカウントをお持ちですか？
         <a href="" class="link_color">ログイン</a>
       </p>
       <p class="authentication_question">
