--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <form class="account_form">
           <div class="explanation_text account_info">
-            <p>アカウント情報</p>
+            <p class="account_text">アカウント情報</p>
           </div>
           <div class="form_area name_area">
             <div class="form_size last_name">
@@ -104,17 +104,13 @@
 
           <div class="form_area note">
             <p>備考</p>
-            <input type="text" id="note" name="note" value="" placeholder="何かあればご記入ください" class="input_area input_area-note">
+            <textarea name="note" id="note" cols="30" rows="10" placeholder="何かあればご記入ください" class="input_area input_area-note"></textarea>
           </div>
 
           <div class="create_account">
             <input type="submit" value="アカウント作成" class="button-create_account">
             <div class="agreement">
-              <p>アカウントを作成することにより、
-                <a href="" class="link_color">利用規約</a>
-                と
-                <a href="" class="link_color">プライバシーポリシー</a>
-                に同意するものとします。
+              <p>アカウントを作成することにより、<a href="" class="link_color">利用規約</a>と<a href="" class="link_color">プライバシーポリシー</a>に同意するものとします。
               </p>
             </div>
           </div>
@@ -126,7 +122,7 @@
         <a href="" class="link_color">ログイン</a>
       </p>
       <p class="authentication_question">
-        <a href="" class="link_color">認証メールが届きませんか?</a>
+        <a href="" class="link_color">認証メールが届きませんか？</a>
       </p>
     </div>
   </body>
