--- a/index.html
+++ b/index.html
@@ -91,14 +91,23 @@
 
           <div class="course">
             <p>希望コース</p>
-            <label for="front" class="checkbox_area">
-              <input type="checkbox" id="front" value="1" class="checkbox"> フロントエンド
+            <label for="front" class="checkbox_area test">
+              <input type="checkbox" id="front" value="1" class="checkbox">
+              <p class="course_name">
+                フロントエンド
+              </p>
             </label>
             <label for="back" class="checkbox_area">
-            <input type="checkbox" id="back" value="2" class="checkbox"> バックエンド
+            <input type="checkbox" id="back" value="2" class="checkbox">
+              <p class="course_name">
+                バックエンド
+              </p>
             </label>
             <label for="app" class="checkbox_area">
-              <input type="checkbox" id="app" value="3" class="checkbox"> アプリ
+              <input type="checkbox" id="app" value="3" class="checkbox">
+              <p class="course_name">
+                アプリ
+              </p>
             </label>
           </div>
 
