チェックマークのみ

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
           <div class="course">
             <p>希望コース</p>
-            <label for="front" class="checkbox_area test">
+            <label for="front" class="checkbox_area">
               <input type="checkbox" id="front" value="1" class="checkbox">
               <p class="course_name">
                 フロントエンド
