--- a/index.html
+++ b/index.html
@@ -96,18 +96,21 @@
               <p class="course_name">
                 フロントエンド
               </p>
+              <!-- <span class="course_name">フロントエンド</span> -->
             </label>
             <label for="back" class="checkbox_area">
             <input type="checkbox" id="back" value="2" class="checkbox">
               <p class="course_name">
                 バックエンド
               </p>
+              <!-- <span class="course_name">バックエンド</span> -->
             </label>
             <label for="app" class="checkbox_area">
               <input type="checkbox" id="app" value="3" class="checkbox">
               <p class="course_name">
                 アプリ
               </p>
+              <!-- <span class="course_name">アプリ</span> -->
             </label>
           </div>
 
