リファクタリング

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <h1>アカウント作成</h1>
         </div>
         <div class="icon_area">
-          <div class="Facebook_icon">
+          <div class="icon icon-Facebook">
             <a href="" class="button Facebook_link">Facebookでスタート</a>
           </div>
-          <div class="Google_icon">
+          <div class="icon icon-Google">
             <a href="" class="button Google_link">Googleでスタート</a>
           </div>
         </div>
@@ -34,11 +34,11 @@
           <div class="form_area name_area">
             <div class="form_size last_name">
               <p class="required_item">名字</p>
-              <input type="text" name="last_name" class="input_area" required>
+              <input type="text" id="last_name" name="last_name" class="input_area" required>
             </div>
             <div class="form_size first_name">
               <p class="required_item">名前</p>
-              <input type="text" name="first_name" class="input_area" required>
+              <input type="text" id="first_name" name="first_name" class="input_area" required>
             </div>
           </div>
 
