リファクタリング

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <input type="password" class="input_area" required>
           </div>
 
-          <div class="course">
+          <div class="form_area course">
             <p>希望コース</p>
             <label for="front" class="checkbox_area">
               <input type="checkbox" id="front" value="1" class="checkbox">
