--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="create_account">
             <input type="submit" value="アカウント作成" class="button-create_account">
             <div class="agreement">
-              <p>アカウントを作成することにより、<a href="" class="link_color">利用規約</a>と<a href="" class="link_color">プライバシーポリシー</a>に同意するものとします。
+              <p>アカウントを作成することにより、<a href="" class="link">利用規約</a>と<a href="" class="link">プライバシーポリシー</a>に同意するものとします。
               </p>
             </div>
           </div>
@@ -129,10 +129,10 @@
 
     <footer class="footer">
       <p class="account_question">すでにアカウントをお持ちですか？
-        <a href="" class="link_color">ログイン</a>
+        <a href="" class="link link-authenticate">ログイン</a>
       </p>
       <p class="authentication_question">
-        <a href="" class="link_color">認証メールが届きませんか？</a>
+        <a href="" class="link link-authenticate">認証メールが届きませんか？</a>
       </p>
     </footer>
   </body>
