buttonエリア修正

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
         <div class="icon_area">
           <div class="icon icon-Facebook">
-            <a href="" class="button Facebook_link">Facebookでスタート</a>
+            <a href="" class="button button-Facebook">Facebookでスタート</a>
           </div>
           <div class="icon icon-Google">
-            <a href="" class="button Google_link">Googleでスタート</a>
+            <a href="" class="button button-Google">Googleでスタート</a>
           </div>
         </div>
         <div class="explanation_text">
