password-confirm追記 / hover修正

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
           <div class="form_area password">
             <p class="required_item">パスワード(確認用)</p>
-            <input type="password" id="password" name="password" class="input_area" required>
+            <input type="password" id="password-confirm" name="password-confirm" class="input_area" required>
           </div>
 
           <div class="form_area course">
